namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-llm-gateway-development/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "data-platform-llm-gateway-development"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "data-platform-engineering"
    cloud-platform.justice.gov.uk/application: "Data Platform LLM Gateway"
    cloud-platform.justice.gov.uk/owner: "Data Platform: dataplatform@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/data-platform"
    cloud-platform.justice.gov.uk/team-name: "data-platform-engineering"
    cloud-platform.justice.gov.uk/review-after: "2025-12-30"
